--- a/gulp/css/partials/layout/_contact.scss
+++ b/gulp/css/partials/layout/_contact.scss
@@ -81,6 +81,7 @@
 		}
 
 		&__txt {
+			margin-bottom: 20px;
 			font-size: 12px;
 		}
 	}
